feat(database): add visibility column and RLS policy for shared folders
- Add visibility column to folders table (personal/shared, default personal)
- Add updatedByUserId column to saved_queries for attribution
- Add folders_visibility_idx index for query performance
- Replace folders_user_isolation RLS with conditional folders_visibility_policy
- Personal folders: user-scoped, shared folders: BU-scoped (tenant+mid)

--- a/.planning/phases/18-shared-query-workspaces/18-02-PLAN.md
+++ b/.planning/phases/18-shared-query-workspaces/18-02-PLAN.md
@@ -13,10 +13,6 @@ files_modified:
   - apps/api/src/saved-queries/saved-queries.service.ts
   - apps/api/src/saved-queries/saved-queries.controller.ts
   - apps/api/src/saved-queries/saved-queries.repository.ts
-  - apps/api/src/query-activities/query-activities.controller.ts
-  - packages/shared-types/src/errors/error-codes.ts
-  - packages/shared-types/src/errors/error-messages.ts
-  - packages/backend-shared/src/common/errors/error-policy.ts
 autonomous: true
 
 must_haves:
@@ -26,7 +22,6 @@ must_haves:
     - "Shared folder list returns creator name from users table join"
     - "Saving a shared query with a stale expectedHash returns 409 Conflict"
     - "saved_queries.updated_by_user_id is set on every update"
-    - "linkQuery, unlinkQuery, publishQuery, checkDrift, and getBlastRadius require teamCollaboration (Enterprise), not just deployToAutomation (Pro)"
     - "GET /saved-queries/:id response includes latestVersionHash from the latest query_versions row"
   artifacts:
     - path: "apps/api/src/folders/folders.service.ts"
@@ -41,18 +36,6 @@ must_haves:
     - path: "apps/api/src/saved-queries/saved-queries.service.ts"
       provides: "Stale detection via expectedHash comparison, updatedByUserId tracking, latestVersionHash in findById"
       contains: "expectedHash"
-    - path: "apps/api/src/query-activities/query-activities.controller.ts"
-      provides: "Re-gated link/publish/drift/blast endpoints requiring teamCollaboration"
-      contains: "teamCollaboration"
-    - path: "packages/shared-types/src/errors/error-codes.ts"
-      provides: "STALE_CONTENT error code"
-      contains: "STALE_CONTENT"
-    - path: "packages/shared-types/src/errors/error-messages.ts"
-      provides: "Client-facing message for STALE_CONTENT"
-      contains: "STALE_CONTENT"
-    - path: "packages/backend-shared/src/common/errors/error-policy.ts"
-      provides: "STALE_CONTENT mapped to 409 and added to TERMINAL_CODES"
-      contains: "STALE_CONTENT"
   key_links:
     - from: "apps/api/src/folders/folders.service.ts"
       to: "apps/api/src/features/features.service.ts"
@@ -62,17 +45,13 @@ must_haves:
       to: "query_versions table"
       via: "Hash comparison for stale detection"
       pattern: "expectedHash|sqlTextHash"
-    - from: "apps/api/src/query-activities/query-activities.controller.ts"
-      to: "apps/api/src/features/features.service.ts"
-      via: "requireTeamCollabFeature for link/publish/drift/blast"
-      pattern: "teamCollaboration"
 ---
 
 <objective>
-Add backend logic for shared folder operations, stale detection on shared query saves, re-gate link/publish/drift/blast endpoints from Pro to Enterprise, and wire latestVersionHash into the saved query detail response.
+Add backend logic for shared folder operations, stale detection on shared query saves, and wire latestVersionHash into the saved query detail response.
 
-Purpose: Backend business logic that enforces sharing rules, stale detection, tier gating for collaboration features, and provides the hash needed for frontend stale detection.
-Output: Updated folder service/controller/repository, saved-queries service/controller, query-activities controller, and error code additions.
+Purpose: Backend business logic that enforces sharing rules, stale detection, and provides the hash needed for frontend stale detection. Query-activities endpoints are NOT modified — `deployToAutomation` continues to gate linking as it does today per user decision (no re-gating migration needed).
+Output: Updated folder service/controller/repository and saved-queries service/controller/repository.
 </objective>
 
 <execution_context>
@@ -95,11 +74,7 @@ Output: Updated folder service/controller/repository, saved-queries service/cont
 @apps/api/src/saved-queries/saved-queries.service.ts
 @apps/api/src/saved-queries/saved-queries.controller.ts
 @apps/api/src/saved-queries/saved-queries.repository.ts
-@apps/api/src/query-activities/query-activities.controller.ts
 @apps/api/src/features/features.service.ts
-@packages/shared-types/src/errors/error-codes.ts
-@packages/shared-types/src/errors/error-messages.ts
-@packages/backend-shared/src/common/errors/error-policy.ts
 @packages/backend-shared/src/database/rls-context.service.ts
 </context>
 
@@ -189,44 +164,14 @@ Run `pnpm --filter api test` to verify existing folder tests still pass. Run `pn
 </task>
 
 <task type="auto">
-  <name>Task 2: Stale detection, STALE_CONTENT error code, latestVersionHash response, and re-gate link/publish/drift/blast to Enterprise</name>
+  <name>Task 2: Stale detection, latestVersionHash response, and updatedByUserId tracking</name>
   <files>
     apps/api/src/saved-queries/saved-queries.service.ts
     apps/api/src/saved-queries/saved-queries.controller.ts
     apps/api/src/saved-queries/saved-queries.repository.ts
-    apps/api/src/query-activities/query-activities.controller.ts
-    packages/shared-types/src/errors/error-codes.ts
-    packages/shared-types/src/errors/error-messages.ts
-    packages/backend-shared/src/common/errors/error-policy.ts
   </files>
   <action>
-**1. Add STALE_CONTENT error code (three files):**
-
-The error code system spans three files. All three MUST be updated:
-
-**a) `packages/shared-types/src/errors/error-codes.ts`** — Add to the `ErrorCode` object in the "Business Logic" section:
-```typescript
-STALE_CONTENT: "STALE_CONTENT",
-```
-
-**b) `packages/shared-types/src/errors/error-messages.ts`** — Add client-facing message:
-```typescript
-[ErrorCode.STALE_CONTENT]: "This content was modified by another user. Please reload and try again.",
-```
-
-**c) `packages/backend-shared/src/common/errors/error-policy.ts`** — Two changes:
-  - Add `ErrorCode.STALE_CONTENT` to the `TERMINAL_CODES` set (stale content won't resolve with retry — user must decide to overwrite or reload)
-  - Add a case in `getHttpStatus()` for STALE_CONTENT mapping to 409:
-```typescript
-case ErrorCode.STALE_CONTENT:
-  return 409;
-```
-  - Add entry in `getErrorTitle()`:
-```typescript
-[ErrorCode.STALE_CONTENT]: "Stale Content",
-```
-
-**2. Update `SavedQueriesService` (`saved-queries.service.ts`):**
+**1. Update `SavedQueriesService` (`saved-queries.service.ts`):**
 
 **Stale detection in `update()` method:**
 
@@ -271,59 +216,23 @@ Include `latestVersionHash` in the returned response object. This is what the fr
 
 When returning saved query responses (findById, findAll, findAllListItems), JOIN with users table to get the name of the user who last updated. Add `updatedByUserName` to the response interface and map it accordingly.
 
-**3. Update `SavedQueriesController` (`saved-queries.controller.ts`):**
+**2. Update `SavedQueriesController` (`saved-queries.controller.ts`):**
 
 Update the `toResponse()` and `toListItem()` methods to include `updatedByUserName` and `latestVersionHash` in the response.
 
-**4. Re-gate link/publish/drift/blast to Enterprise (`query-activities.controller.ts`):**
-
-The current `requireDeployFeature()` method checks `features.deployToAutomation`. For the link, unlink, publish, drift, and blast-radius endpoints, these must now ALSO require `teamCollaboration` (Enterprise tier).
-
-Add a new private method `requireTeamCollabFeature()`:
-```typescript
-private async requireTeamCollabFeature(tenantId: string): Promise<void> {
-  const { features } = await this.featuresService.getTenantFeatures(tenantId);
-  if (!features.teamCollaboration) {
-    throw new AppError(ErrorCode.FEATURE_NOT_ENABLED, undefined, {
-      operation: 'teamCollaboration',
-      reason: 'Linking, publishing, and drift detection require Enterprise subscription',
-    });
-  }
-}
-```
-
-Update these endpoints to call `requireTeamCollabFeature()` INSTEAD OF (not in addition to) `requireDeployFeature()`:
-- `linkQuery()` — replace `await this.requireDeployFeature(user.tenantId)` with `await this.requireTeamCollabFeature(user.tenantId)`
-- `unlinkQuery()` — same replacement
-- `publishQuery()` — same replacement
-- `checkDrift()` — same replacement
-- `getBlastRadius()` — same replacement
-
-The `create()` and `findAll()` and `findOne()` endpoints keep using `requireDeployFeature()` — deploy (fire-and-forget QA creation) stays at Pro tier. Only the linking/publishing/drift/blast operations move to Enterprise.
-
-This is the critical re-gating from the Roadmap tier model:
-- Pro: deploy (fire-and-forget only, no persistent link)
-- Enterprise: deploy + link + publish + drift + blast radius
-
-Per the Roadmap: "Gates: shared folder CRUD, move to/from shared, linking, publishing, drift detection, blast radius" and "deployToAutomation stays Pro but becomes fire-and-forget only (no persistent link)"
-
 **Important notes:**
-- There is NO auto-link step in `QueryActivitiesService.create()`. The `create()` method returns `{ objectId, customerKey }` and the linking is a separate explicit user action via `POST /query-activities/link/:savedQueryId`. The current behavior is already fire-and-forget for create. The re-gating work is entirely about changing which endpoints check which feature key.
-- `requireDeployFeature()` remains unchanged and continues to be used for `create()`, `findAll()`, and `findOne()`.
+- The STALE_CONTENT error code was already defined in Plan 01 Task 3 (error-codes.ts, error-messages.ts, error-policy.ts). This task only uses it — no error code file changes needed here.
+- Query-activities endpoints are NOT modified in this plan. `deployToAutomation` continues to gate linking as it does today per the locked CONTEXT.md decision: "deployToAutomation continues to gate linking as it does today — no re-gating migration needed."
   </action>
   <verify>
-Run `pnpm --filter api test` to verify all API tests pass. Run `pnpm typecheck` to verify type safety. Verify the STALE_CONTENT error code exists in `packages/shared-types/src/errors/error-codes.ts` and maps to 409 in `packages/backend-shared/src/common/errors/error-policy.ts`. Verify `query-activities.controller.ts` has `requireTeamCollabFeature` calls on linkQuery, unlinkQuery, publishQuery, checkDrift, and getBlastRadius.
+Run `pnpm --filter api test` to verify all API tests pass. Run `pnpm typecheck` to verify type safety. Verify the STALE_CONTENT error code is used correctly in saved-queries.service.ts.
   </verify>
   <done>
-- `STALE_CONTENT` error code added to `packages/shared-types/src/errors/error-codes.ts`
-- `STALE_CONTENT` message added to `packages/shared-types/src/errors/error-messages.ts`
-- `STALE_CONTENT` added to TERMINAL_CODES, mapped to 409, and titled in `packages/backend-shared/src/common/errors/error-policy.ts`
 - `SavedQueriesService.update()` checks `expectedHash` and throws `STALE_CONTENT` (409) on mismatch
 - `updatedByUserId` is set on every save to the current user's ID
 - `updatedByUserName` is returned in saved query responses (joined from users table)
 - `latestVersionHash` is returned in `GET /saved-queries/:id` response from latest query_versions row
-- `linkQuery`, `unlinkQuery`, `publishQuery`, `checkDrift`, and `getBlastRadius` require `teamCollaboration` (Enterprise) instead of `deployToAutomation` (Pro)
-- `create()`, `findAll()`, and `findOne()` still use `requireDeployFeature()` (Pro tier)
+- Query-activities controller is UNCHANGED — `deployToAutomation` continues to gate link/unlink/publish/drift/blast per locked decision
 - All API tests pass, typecheck clean
   </done>
 </task>
@@ -337,17 +246,15 @@ Run `pnpm --filter api test` to verify all API tests pass. Run `pnpm typecheck` 
 4. Save with stale `expectedHash` returns 409 Conflict
 5. `GET /folders` returns `visibility`, `userId`, `creatorName` in response
 6. `GET /saved-queries/:id` returns `latestVersionHash` in response
-7. Pro-tier `POST /query-activities/link/:id` returns 403 FEATURE_NOT_ENABLED
-8. Enterprise-tier `POST /query-activities/link/:id` succeeds
-9. Pro-tier `POST /query-activities` (deploy) still succeeds (fire-and-forget)
+7. Pro-tier `POST /query-activities/link/:id` continues to work (gated by `deployToAutomation`, unchanged)
+8. Pro-tier `POST /query-activities` (deploy) still succeeds
 </verification>
 
 <success_criteria>
 - Shared folder CRUD gated behind teamCollaboration (Enterprise only)
 - Stale detection prevents concurrent save conflicts on shared queries
-- Link/publish/drift/blast re-gated from Pro (deployToAutomation) to Enterprise (teamCollaboration)
+- Query-activities endpoints unchanged — deployToAutomation gates link/publish/drift/blast as before
 - All responses include new fields (visibility, creatorName, updatedByUserName, latestVersionHash)
-- STALE_CONTENT error code properly defined across all three error files
 </success_criteria>
 
 <output>
