--- a/.planning/phases/18-shared-query-workspaces/18-05-PLAN.md
+++ b/.planning/phases/18-shared-query-workspaces/18-05-PLAN.md
@@ -7,7 +7,7 @@ depends_on: ["18-03", "18-04"]
 files_modified:
   - apps/api/src/folders/__tests__/folders-shared.integration.test.ts
   - apps/api/src/saved-queries/__tests__/saved-queries-stale.integration.test.ts
-  - apps/api/src/query-activities/__tests__/query-activities-tier-gating.integration.test.ts
+  - apps/api/src/query-activities/__tests__/query-activities-deploy-gating.integration.test.ts
   - apps/web/src/features/editor-workspace/components/__tests__/SharedQuerySection.test.tsx
   - apps/web/src/features/editor-workspace/components/__tests__/StaleWarningDialog.test.tsx
   - apps/web/src/features/editor-workspace/components/__tests__/ShareConfirmationDialog.test.tsx
@@ -18,8 +18,8 @@ must_haves:
   truths:
     - "Backend tests verify shared folder CRUD with teamCollaboration feature gating"
     - "Backend tests verify stale detection returns 409 on hash mismatch"
-    - "Backend tests verify Pro-tier POST /query-activities/link/:savedQueryId returns 403"
-    - "Backend tests verify Pro-tier POST /query-activities/publish/:savedQueryId returns 403"
+    - "Backend tests verify free-tier POST /query-activities/link/:savedQueryId returns 403 (no deployToAutomation)"
+    - "Backend tests verify Pro-tier POST /query-activities/link/:savedQueryId succeeds (has deployToAutomation)"
     - "Backend tests verify Enterprise-tier link/publish/drift/blast endpoints succeed"
     - "Frontend tests verify two-section sidebar rendering"
     - "Frontend tests verify stale warning dialog behavior"
@@ -31,8 +31,8 @@ must_haves:
     - path: "apps/api/src/saved-queries/__tests__/saved-queries-stale.integration.test.ts"
       provides: "Integration tests for stale detection 409 response"
       min_lines: 50
-    - path: "apps/api/src/query-activities/__tests__/query-activities-tier-gating.integration.test.ts"
-      provides: "Integration tests for Enterprise re-gating of link/publish/drift/blast"
+    - path: "apps/api/src/query-activities/__tests__/query-activities-deploy-gating.integration.test.ts"
+      provides: "Integration tests confirming deployToAutomation gates link/publish/drift/blast (unchanged by Phase 18)"
       min_lines: 60
     - path: "apps/web/src/features/editor-workspace/components/__tests__/SharedQuerySection.test.tsx"
       provides: "Component tests for Enterprise badge, locked teaser, shared tree rendering"
@@ -45,10 +45,10 @@ must_haves:
       to: "apps/api/src/folders/folders.service.ts"
       via: "Tests exercise shared folder service methods"
       pattern: "teamCollaboration|visibility.*shared"
-    - from: "apps/api/src/query-activities/__tests__/query-activities-tier-gating.integration.test.ts"
+    - from: "apps/api/src/query-activities/__tests__/query-activities-deploy-gating.integration.test.ts"
       to: "apps/api/src/query-activities/query-activities.controller.ts"
-      via: "Tests verify endpoint-level tier gating for link/publish/drift/blast"
-      pattern: "teamCollaboration|FEATURE_NOT_ENABLED"
+      via: "Tests confirm deployToAutomation still gates link/publish/drift/blast endpoints"
+      pattern: "deployToAutomation|FEATURE_NOT_ENABLED"
     - from: "apps/web/src/features/editor-workspace/components/__tests__/SharedQuerySection.test.tsx"
       to: "apps/web/src/features/editor-workspace/components/SharedQuerySection.tsx"
       via: "Tests verify feature gating and rendering"
@@ -56,9 +56,9 @@ must_haves:
 ---
 
 <objective>
-Write comprehensive tests for all Phase 18 behavior: backend integration tests for shared folder CRUD, stale detection, and Enterprise tier-gating of link/publish/drift/blast; frontend component tests for the two-section sidebar, stale warning dialog, and share confirmation dialog.
+Write comprehensive tests for all Phase 18 behavior: backend integration tests for shared folder CRUD, stale detection, and confirmation that deployToAutomation still gates link/publish/drift/blast (unchanged); frontend component tests for the two-section sidebar, stale warning dialog, and share confirmation dialog.
 
-Purpose: Verify all locked decisions are correctly implemented and prevent regressions.
+Purpose: Verify all locked decisions are correctly implemented and prevent regressions. Critically, confirm that link/publish/drift/blast gating is UNCHANGED from pre-Phase-18 behavior (deployToAutomation, NOT teamCollaboration).
 Output: Test files for backend and frontend Phase 18 features.
 </objective>
 
@@ -86,11 +86,11 @@ Output: Test files for backend and frontend Phase 18 features.
 <tasks>
 
 <task type="auto">
-  <name>Task 1: Backend integration tests for shared folders, stale detection, and tier gating</name>
+  <name>Task 1: Backend integration tests for shared folders, stale detection, and deploy gating confirmation</name>
   <files>
     apps/api/src/folders/__tests__/folders-shared.integration.test.ts
     apps/api/src/saved-queries/__tests__/saved-queries-stale.integration.test.ts
-    apps/api/src/query-activities/__tests__/query-activities-tier-gating.integration.test.ts
+    apps/api/src/query-activities/__tests__/query-activities-deploy-gating.integration.test.ts
   </files>
   <action>
 **1. Create `folders-shared.integration.test.ts`:**
@@ -139,38 +139,46 @@ Test cases:
 - `GET /saved-queries/:id` response includes `latestVersionHash` from latest query_versions row
 - After saving new SQL, `latestVersionHash` changes to the new hash
 
-**3. Create `query-activities-tier-gating.integration.test.ts`:**
+**3. Create `query-activities-deploy-gating.integration.test.ts`:**
 
-This file tests the re-gating of link/publish/drift/blast from Pro to Enterprise. These are endpoint-level tests verifying the controller's `requireTeamCollabFeature()` guard.
+This file confirms that `deployToAutomation` continues to gate link/publish/drift/blast endpoints — Phase 18 did NOT change this gating. Per the locked CONTEXT.md decision: "deployToAutomation continues to gate linking as it does today — no re-gating migration needed."
 
 Test cases:
 
-**Pro-tier (deployToAutomation=true, teamCollaboration=false) — link/publish/drift/blast blocked:**
-- `POST /query-activities/link/:savedQueryId` returns 403 FEATURE_NOT_ENABLED for Pro-tier tenant
-- `DELETE /query-activities/link/:savedQueryId` (unlink) returns 403 FEATURE_NOT_ENABLED for Pro-tier tenant
-- `POST /query-activities/publish/:savedQueryId` returns 403 FEATURE_NOT_ENABLED for Pro-tier tenant
-- `GET /query-activities/drift/:savedQueryId` returns 403 FEATURE_NOT_ENABLED for Pro-tier tenant
-- `GET /query-activities/blast-radius/:savedQueryId` returns 403 FEATURE_NOT_ENABLED for Pro-tier tenant
+**Free-tier (deployToAutomation=false) — all query-activity endpoints blocked:**
+- `POST /query-activities/link/:savedQueryId` returns 403 FEATURE_NOT_ENABLED for free-tier tenant
+- `DELETE /query-activities/link/:savedQueryId` (unlink) returns 403 FEATURE_NOT_ENABLED for free-tier tenant
+- `POST /query-activities/publish/:savedQueryId` returns 403 FEATURE_NOT_ENABLED for free-tier tenant
+- `GET /query-activities/drift/:savedQueryId` returns 403 FEATURE_NOT_ENABLED for free-tier tenant
+- `GET /query-activities/blast-radius/:savedQueryId` returns 403 FEATURE_NOT_ENABLED for free-tier tenant
+- `POST /query-activities` (deploy/create) returns 403 FEATURE_NOT_ENABLED for free-tier tenant
 
-**Pro-tier — deploy (create) still works:**
-- `POST /query-activities` succeeds for Pro-tier tenant (fire-and-forget, no link)
+**Pro-tier (deployToAutomation=true, teamCollaboration=false) — all query-activity endpoints SUCCEED:**
+- `POST /query-activities` (deploy/create) succeeds for Pro-tier tenant
 - `GET /query-activities` succeeds for Pro-tier tenant
+- `POST /query-activities/link/:savedQueryId` succeeds for Pro-tier tenant
+- `DELETE /query-activities/link/:savedQueryId` (unlink) succeeds for Pro-tier tenant
+- `POST /query-activities/publish/:savedQueryId` succeeds for Pro-tier tenant
+- `GET /query-activities/drift/:savedQueryId` succeeds for Pro-tier tenant
+- `GET /query-activities/blast-radius/:savedQueryId` succeeds for Pro-tier tenant
 
-**Enterprise-tier (teamCollaboration=true) — all endpoints work:**
+**Enterprise-tier (deployToAutomation=true, teamCollaboration=true) — all endpoints succeed:**
 - `POST /query-activities/link/:savedQueryId` succeeds for Enterprise-tier tenant
 - `POST /query-activities/publish/:savedQueryId` succeeds for Enterprise-tier tenant
 - `GET /query-activities/drift/:savedQueryId` succeeds for Enterprise-tier tenant
 - `GET /query-activities/blast-radius/:savedQueryId` succeeds for Enterprise-tier tenant
 
+**Key assertion:** Pro-tier users CAN link/publish/drift/blast. The gating is `deployToAutomation` (Pro+Enterprise), NOT `teamCollaboration` (Enterprise-only). This confirms that Phase 18 did not introduce a regression.
+
 Follow Arrange-Act-Assert pattern. Use behavioral assertions (test response body, not mock calls). Use existing RLS test helpers (`withRlsContext`, etc.).
   </action>
   <verify>
-Run `pnpm --filter api test` to verify all tests pass. Verify at least 20 test cases across all three files. Check that tests cover the locked decisions: feature gating, RLS visibility, stale detection, Enterprise tier-gating of link/publish/drift/blast.
+Run `pnpm --filter api test` to verify all tests pass. Verify at least 20 test cases across all three files. Check that tests cover the locked decisions: feature gating, RLS visibility, stale detection, deployToAutomation gating preserved for link/publish/drift/blast.
   </verify>
   <done>
 - `folders-shared.integration.test.ts` has 10+ test cases covering feature gating, RLS, CRUD, share
 - `saved-queries-stale.integration.test.ts` has 7+ test cases covering hash comparison, 409, updatedByUserId, latestVersionHash
-- `query-activities-tier-gating.integration.test.ts` has 10+ test cases covering Pro blocked (link/publish/drift/blast), Pro allowed (create/list), Enterprise allowed (all)
+- `query-activities-deploy-gating.integration.test.ts` has 12+ test cases confirming: free-tier blocked (no deployToAutomation), Pro-tier succeeds (has deployToAutomation), Enterprise-tier succeeds
 - All backend tests pass
   </done>
 </task>
@@ -262,13 +270,13 @@ Run `pnpm --filter @qpp/web test` to verify all tests pass. Verify at least 20 t
 2. `pnpm --filter @qpp/web test` passes (all frontend tests)
 3. `pnpm test` passes (full monorepo)
 4. At least 40 new test cases total across all files
-5. Tests cover all locked decisions: feature gating, RLS, stale detection, link hiding, enhanced delete, Enterprise tier-gating of link/publish/drift/blast
+5. Tests cover all locked decisions: feature gating, RLS, stale detection, link hiding, enhanced delete, deployToAutomation gating preserved for link/publish/drift/blast
 </verification>
 
 <success_criteria>
 - Comprehensive test coverage for all Phase 18 features
 - Backend integration tests verify real database behavior (not mocks)
-- Tier-gating tests confirm Pro cannot link/publish/drift/blast (403), Enterprise can
+- Deploy-gating tests confirm Pro CAN link/publish/drift/blast (deployToAutomation), free tier cannot
 - Frontend tests verify component rendering and user interactions
 - No regressions in existing test suites
 </success_criteria>
