--- a/.planning/phases/18-shared-query-workspaces/18-01-PLAN.md
+++ b/.planning/phases/18-shared-query-workspaces/18-01-PLAN.md
@@ -10,6 +10,9 @@ files_modified:
   - packages/shared-types/src/features.ts
   - packages/shared-types/src/folders.ts
   - packages/shared-types/src/saved-queries.ts
+  - packages/shared-types/src/errors/error-codes.ts
+  - packages/shared-types/src/errors/error-messages.ts
+  - packages/backend-shared/src/common/errors/error-policy.ts
 autonomous: true
 
 must_haves:
@@ -21,6 +24,7 @@ must_haves:
     - "Shared types include visibility field in folder schemas"
     - "saved_queries has updated_by_user_id column for stale detection attribution"
     - "SavedQueryResponseSchema includes latestVersionHash for stale detection on load"
+    - "STALE_CONTENT error code exists in shared-types and maps to HTTP 409"
   artifacts:
     - path: "packages/database/drizzle/0029_shared_query_workspaces.sql"
       provides: "Migration adding visibility column, updated_by_user_id, and conditional RLS"
@@ -37,6 +41,12 @@ must_haves:
     - path: "packages/shared-types/src/saved-queries.ts"
       provides: "Updated saved query schemas with updatedByUserName, expectedHash, and latestVersionHash"
       contains: "latestVersionHash"
+    - path: "packages/shared-types/src/errors/error-codes.ts"
+      provides: "STALE_CONTENT error code in ErrorCode object"
+      contains: "STALE_CONTENT"
+    - path: "packages/backend-shared/src/common/errors/error-policy.ts"
+      provides: "STALE_CONTENT mapped to HTTP 409 and added to TERMINAL_CODES"
+      contains: "STALE_CONTENT"
   key_links:
     - from: "packages/database/src/schema.ts"
       to: "packages/database/drizzle/0029_shared_query_workspaces.sql"
@@ -46,13 +56,17 @@ must_haves:
       to: "TIER_FEATURES.enterprise"
       via: "teamCollaboration in enterprise tier array"
       pattern: "teamCollaboration"
+    - from: "packages/shared-types/src/errors/error-codes.ts"
+      to: "packages/backend-shared/src/common/errors/error-policy.ts"
+      via: "Error code defined in shared-types, HTTP mapping in backend-shared"
+      pattern: "STALE_CONTENT"
 ---
 
 <objective>
-Add database foundation for shared query workspaces: visibility column on folders, conditional RLS policy, teamCollaboration feature key, and shared-types updates.
+Add database foundation for shared query workspaces: visibility column on folders, conditional RLS policy, teamCollaboration feature key, shared-types updates, and STALE_CONTENT error code infrastructure.
 
-Purpose: This is the foundational layer — all subsequent plans depend on the visibility column, the RLS policy, and the feature key existing.
-Output: Migration file, updated Drizzle schema, updated shared-types for folders/saved-queries/features.
+Purpose: This is the foundational layer — all subsequent plans depend on the visibility column, the RLS policy, the feature key, and the error code existing.
+Output: Migration file, updated Drizzle schema, updated shared-types for folders/saved-queries/features/errors, and backend-shared error policy update.
 </objective>
 
 <execution_context>
@@ -72,6 +86,9 @@ Output: Migration file, updated Drizzle schema, updated shared-types for folders
 @packages/shared-types/src/features.ts
 @packages/shared-types/src/folders.ts
 @packages/shared-types/src/saved-queries.ts
+@packages/shared-types/src/errors/error-codes.ts
+@packages/shared-types/src/errors/error-messages.ts
+@packages/backend-shared/src/common/errors/error-policy.ts
 </context>
 
 <tasks>
@@ -268,21 +285,67 @@ Run `pnpm --filter @qpp/shared-types build` and `pnpm --filter @qpp/shared-types
   </done>
 </task>
 
+<task type="auto">
+  <name>Task 3: STALE_CONTENT error code infrastructure</name>
+  <files>
+    packages/shared-types/src/errors/error-codes.ts
+    packages/shared-types/src/errors/error-messages.ts
+    packages/backend-shared/src/common/errors/error-policy.ts
+  </files>
+  <action>
+The error code system spans three files. All three MUST be updated:
+
+**1. `packages/shared-types/src/errors/error-codes.ts`** — Add to the `ErrorCode` object in the "Business Logic" section:
+```typescript
+STALE_CONTENT: "STALE_CONTENT",
+```
+
+**2. `packages/shared-types/src/errors/error-messages.ts`** — Add client-facing message:
+```typescript
+[ErrorCode.STALE_CONTENT]: "This content was modified by another user. Please reload and try again.",
+```
+
+**3. `packages/backend-shared/src/common/errors/error-policy.ts`** — Three changes:
+  - Add `ErrorCode.STALE_CONTENT` to the `TERMINAL_CODES` set (stale content won't resolve with retry — user must decide to overwrite or reload)
+  - Add a case in `getHttpStatus()` for STALE_CONTENT mapping to 409:
+```typescript
+case ErrorCode.STALE_CONTENT:
+  return 409;
+```
+  - Add entry in `getErrorTitle()`:
+```typescript
+[ErrorCode.STALE_CONTENT]: "Stale Content",
+```
+  </action>
+  <verify>
+Run `pnpm --filter @qpp/shared-types build` to verify error-codes compile. Run `pnpm --filter @qpp/backend-shared build` to verify error-policy compiles. Verify `STALE_CONTENT` exists in `error-codes.ts` and maps to 409 in `error-policy.ts`.
+  </verify>
+  <done>
+- `STALE_CONTENT` error code added to `packages/shared-types/src/errors/error-codes.ts`
+- `STALE_CONTENT` message added to `packages/shared-types/src/errors/error-messages.ts`
+- `STALE_CONTENT` added to TERMINAL_CODES, mapped to 409, and titled in `packages/backend-shared/src/common/errors/error-policy.ts`
+- Both packages build cleanly
+  </done>
+</task>
+
 </tasks>
 
 <verification>
 1. `pnpm --filter @qpp/database build` passes (schema compiles)
 2. `pnpm --filter @qpp/shared-types build && pnpm --filter @qpp/shared-types test` passes
-3. `pnpm typecheck` passes across all packages (no downstream type breaks)
-4. Migration file `0029_shared_query_workspaces.sql` exists with correct DDL
-5. `teamCollaboration` appears only in Enterprise tier features
-6. `SavedQueryResponseSchema` includes `latestVersionHash` field
+3. `pnpm --filter @qpp/backend-shared build` passes
+4. `pnpm typecheck` passes across all packages (no downstream type breaks)
+5. Migration file `0029_shared_query_workspaces.sql` exists with correct DDL
+6. `teamCollaboration` appears only in Enterprise tier features
+7. `SavedQueryResponseSchema` includes `latestVersionHash` field
+8. `STALE_CONTENT` error code exists and maps to HTTP 409
 </verification>
 
 <success_criteria>
 - Database schema has `visibility` column on folders with conditional RLS
 - `teamCollaboration` feature key is Enterprise-only
 - Shared-types reflect new fields for folders (visibility, creatorName) and saved-queries (expectedHash, updatedByUserName, latestVersionHash)
+- STALE_CONTENT error code defined across shared-types and backend-shared
 - All packages build and typecheck cleanly
 </success_criteria>
 
