feat(18-02): shared folder service, repository, and controller changes
- FoldersRepository interface uses custom Folder type with creatorName
- DrizzleFoldersRepository JOINs users table for creatorName in findAll/findById
- FoldersService gates shared folder creation behind teamCollaboration feature
- shareFolder() method checks feature + creator ownership for drag-to-shared flow
- FoldersController adds POST :id/share endpoint with CsrfGuard and Audited
- toResponse includes visibility, userId, and creatorName fields
- FoldersModule imports FeaturesModule for feature service injection
- folder.shared audit event type added to shared-types

--- a/.planning/phases/18-shared-query-workspaces/18-01-PLAN.md
+++ b/.planning/phases/18-shared-query-workspaces/18-01-PLAN.md
@@ -6,7 +6,8 @@ wave: 1
 depends_on: []
 files_modified:
   - packages/database/src/schema.ts
-  - packages/database/drizzle/0029_shared_query_workspaces.sql
+  - packages/database/drizzle/<generated>_shared_query_workspaces.sql (via pnpm db:generate — NOT hand-written)
+  - packages/database/drizzle/<generated>_shared_folders_rls_policy.sql (via drizzle-kit generate --custom — RLS only)
   - packages/shared-types/src/features.ts
   - packages/shared-types/src/folders.ts
   - packages/shared-types/src/saved-queries.ts
@@ -26,9 +27,12 @@ must_haves:
     - "SavedQueryResponseSchema includes latestVersionHash for stale detection on load"
     - "STALE_CONTENT error code exists in shared-types and maps to HTTP 409"
   artifacts:
-    - path: "packages/database/drizzle/0029_shared_query_workspaces.sql"
-      provides: "Migration adding visibility column, updated_by_user_id, and conditional RLS"
+    - path: "packages/database/drizzle/<generated>.sql"
+      provides: "Drizzle Kit-generated migration for columns + index (NOT hand-written)"
       contains: "visibility"
+    - path: "packages/database/drizzle/<generated>_shared_folders_rls_policy.sql"
+      provides: "Custom migration for RLS policy only (--custom flag, the ONE exception)"
+      contains: "folders_visibility_policy"
     - path: "packages/database/src/schema.ts"
       provides: "Drizzle schema with visibility column on folders, updated_by_user_id on saved_queries"
       contains: "visibility"
@@ -49,8 +53,8 @@ must_haves:
       contains: "STALE_CONTENT"
   key_links:
     - from: "packages/database/src/schema.ts"
-      to: "packages/database/drizzle/0029_shared_query_workspaces.sql"
-      via: "Drizzle schema must match migration DDL"
+      to: "packages/database/drizzle/<generated>.sql"
+      via: "pnpm db:generate produces migration from schema diff — never hand-write DDL"
       pattern: "visibility.*varchar"
     - from: "packages/shared-types/src/features.ts"
       to: "TIER_FEATURES.enterprise"
@@ -97,7 +101,8 @@ Output: Migration file, updated Drizzle schema, updated shared-types for folders
   <name>Task 1: Database migration and Drizzle schema for shared workspaces</name>
   <files>
     packages/database/src/schema.ts
-    packages/database/drizzle/0029_shared_query_workspaces.sql
+    packages/database/drizzle/<generated>_shared_query_workspaces.sql (via pnpm db:generate)
+    packages/database/drizzle/<generated>_shared_folders_rls_policy.sql (via drizzle-kit generate --custom)
   </files>
   <action>
 **1. Update Drizzle schema (`packages/database/src/schema.ts`):**
@@ -120,25 +125,29 @@ updatedByUserId: uuid("updated_by_user_id").references(() => users.id),
 ```
 Place it after `updatedAt`.
 
-**2. Create custom migration (`packages/database/drizzle/0029_shared_query_workspaces.sql`):**
+**2. Generate migration via Drizzle Kit CLI:**
 
-Generate a custom migration entry first:
+**CRITICAL: No manual/hand-written migrations are allowed.** All migrations MUST be generated using the Drizzle Kit CLI. Never create or edit SQL migration files by hand.
+
+After updating `schema.ts` in step 1, generate the migration:
 ```bash
-cd packages/database && npx drizzle-kit generate --custom --name=shared_query_workspaces
+pnpm db:generate
 ```
 
-Then write the migration SQL:
+This will auto-generate a migration file with the `ALTER TABLE` statements for the new columns and index based on the schema diff. Review the generated SQL to confirm it includes:
+- `ALTER TABLE "folders" ADD COLUMN "visibility" ...`
+- `ALTER TABLE "saved_queries" ADD COLUMN "updated_by_user_id" ...`
+- `CREATE INDEX "folders_visibility_idx" ...`
 
+**3. Generate a SEPARATE custom migration for RLS policy changes:**
+
+Drizzle Kit cannot generate RLS policy DDL — this is the ONE case where `--custom` is required:
+```bash
+cd packages/database && npx drizzle-kit generate --custom --name=shared_folders_rls_policy
+```
+
+Then write ONLY the RLS SQL into the generated file:
 ```sql
--- Add visibility column to folders (default: personal)
-ALTER TABLE "folders" ADD COLUMN "visibility" VARCHAR NOT NULL DEFAULT 'personal';
-
--- Add updated_by_user_id to saved_queries for stale detection attribution
-ALTER TABLE "saved_queries" ADD COLUMN "updated_by_user_id" UUID REFERENCES "users"("id");
-
--- Index for efficient visibility filtering
-CREATE INDEX "folders_visibility_idx" ON "folders" ("visibility");
-
 -- Update folders RLS: personal folders = user-scoped, shared folders = BU-scoped
 -- This replaces the original "folders_user_isolation" policy from migration 0011
 DROP POLICY IF EXISTS "folders_user_isolation" ON "folders";
@@ -162,20 +171,21 @@ CREATE POLICY "folders_visibility_policy"
   );
 ```
 
+**DO NOT put column/index DDL in the custom migration.** Only RLS policy statements go here — everything else is Drizzle Kit's job.
+
 Key RLS design:
 - `USING`: Users see their OWN personal folders PLUS ALL shared folders in the BU (tenant+mid)
 - `WITH CHECK`: Users can INSERT/UPDATE their own personal folders OR any shared folder. The `visibility = 'shared'` condition in WITH CHECK allows any BU user to mutate shared folder rows (BU-owned per locked decision).
 - The `saved_queries` RLS is already broadened to `tenant_id + mid` (migration 0023), so shared queries within shared folders are already visible BU-wide. No saved_queries RLS change needed.
-
-**Important:** Use `drizzle-kit generate --custom` to get a proper journal entry. Do NOT manually create the SQL file without the journal entry.
   </action>
   <verify>
-Run `pnpm db:generate` to verify no drift between schema and migrations. Run `pnpm --filter @qpp/database build` to verify the schema compiles. Check that the migration file exists and has the correct SQL.
+Run `pnpm db:generate` — it should report no pending changes (schema and migrations are in sync). Run `pnpm --filter @qpp/database build` to verify the schema compiles. Confirm TWO migration files were generated: one auto-generated (columns + index) and one custom (RLS policy only).
   </verify>
   <done>
 - `folders` table in Drizzle schema has `visibility` column typed as `"personal" | "shared"` with default `"personal"`
 - `savedQueries` table has `updatedByUserId` column referencing `users.id`
-- Migration 0029 adds visibility column, updated_by_user_id column, visibility index, and conditional RLS policy
+- Drizzle Kit-generated migration adds visibility column, updated_by_user_id column, and visibility index
+- Separate custom migration (RLS only) replaces folders_user_isolation with conditional folders_visibility_policy
 - RLS policy allows seeing personal folders (own) + shared folders (BU-wide)
 - RLS WITH CHECK allows mutating own personal folders + any shared folder
 - Database package builds cleanly
@@ -335,7 +345,8 @@ Run `pnpm --filter @qpp/shared-types build` to verify error-codes compile. Run `
 2. `pnpm --filter @qpp/shared-types build && pnpm --filter @qpp/shared-types test` passes
 3. `pnpm --filter @qpp/backend-shared build` passes
 4. `pnpm typecheck` passes across all packages (no downstream type breaks)
-5. Migration file `0029_shared_query_workspaces.sql` exists with correct DDL
+5. Drizzle Kit-generated migration exists for columns + index (via `pnpm db:generate`, NOT hand-written)
+6. Custom migration exists for RLS policy only (via `drizzle-kit generate --custom`)
 6. `teamCollaboration` appears only in Enterprise tier features
 7. `SavedQueryResponseSchema` includes `latestVersionHash` field
 8. `STALE_CONTENT` error code exists and maps to HTTP 409
